--- a/src/assets/styles/common.sass
+++ b/src/assets/styles/common.sass
@@ -12,3 +12,16 @@ body
 
 a 
     color: inherit
+
+.title
+    font-size: 32px
+    font-weight: 500
+    letter-spacing: 0.2em
+    text-transform: uppercase
+
+.line
+    width: 100px
+    height: 3px
+    background-color: $accent
+    margin: 32px auto 0
+
