05. js-eatme-08-cocktails. Get cocktails from API by change Select input.

--- a/src/assets/styles/main.sass
+++ b/src/assets/styles/main.sass
@@ -1,3 +1,8 @@
 @import './variables.sass'
 @import './common.sass'
 @import './element-plus.sass'
+
+.main
+    display: flex
+    align-items: center
+    justify-content: center
