--- a/src/assets/styles/common.sass
+++ b/src/assets/styles/common.sass
@@ -25,3 +25,61 @@ a
     background-color: $accent
     margin: 32px auto 0
 
+.wrapper 
+    display: flex
+    justify-content: center
+    align-items: center
+
+.info
+    padding: 80px 0
+    text-align: center
+
+
+.wrapper 
+    display: flex
+    justify-content: center
+    align-items: center
+
+.info
+    padding: 80px 0
+    text-align: center
+
+.list 
+    width: 560px
+    padding: 50px 0 80px
+    text-align: left 
+
+    &-item
+        position: relative
+        margin-bottom: 20px
+        padding-left: 30px
+
+        &:last-child
+            margin-bottom: 0
+
+        &::before 
+            content: ''
+            position: absolute
+            top: 50%
+            left: 3px
+            transform: translateY(-50%)
+            width: 17px
+            height: 17px
+            background: url('/src/assets/img/heart.svg') no-repeat 50% 50%
+            transition: all 0.6s ease-in-out
+        
+        &:hover::before 
+            transform: translateY(-50%) scale(1.2)
+            left: 2px
+
+.instructions
+    width: 516px
+    margin: 0 auto
+    font-size: 20px
+    line-height: 30px
+    letter-spacing: 0.1em
+    color: $textMuted
+        
+
+
+
